Resolved http://jira.mpdl.mpg.de/browse/PUBMAN-2179 - new valueManagement implemented - new SelectItemManagement implemented
Former-commit-id: 89b2da9d28b28460a3f7b92936b222800f60bad8

--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
@@ -178,7 +178,7 @@
 								<tr:inputFile id="inpUploadedBibTexFile" styleClass="fileInput" value="#{EasySubmission.uploadedBibTexFile}" />
 							</h:panelGroup>
 							<br class="clear" style="line-height:0.6363em;" />
-							<tr:selectOneRadio styleClass="clear import">
+							<tr:selectOneRadio styleClass="clear import" value="#{EasySubmissionSessionBean.radioSelectReferenceValue}">
 								<f:selectItems id="selReferenceOptions" value="#{EasySubmissionSessionBean.REFERENCE_OPTIONS}"/>
 							</tr:selectOneRadio>
 						</span>
