--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step3Import.jspf
@@ -154,7 +154,7 @@
 						</span>
 						<br class="clear" />
 						<h:panelGroup styleClass="free_area0 xTiny_marginLExcl endline line180" rendered="#{EasySubmissionSessionBean.fulltext}">
-							<tr:selectOneRadio>
+							<tr:selectOneRadio value="#{EasySubmissionSessionBean.radioSelectFulltext}" rendered="#{EasySubmissionSessionBean.fulltext}">
 								<f:selectItems id="selFulltextOptions" value="#{EasySubmissionSessionBean.FULLTEXT_OPTIONS}"/>
 							</tr:selectOneRadio>
 						</h:panelGroup>
@@ -178,7 +178,7 @@
 								<tr:inputFile id="inpUploadedBibTexFile" styleClass="fileInput" value="#{EasySubmission.uploadedBibTexFile}" />
 							</h:panelGroup>
 							<br class="clear" style="line-height:0.6363em;" />
-							<tr:selectOneRadio styleClass="clear import" value="#{EasySubmissionSessionBean.radioSelectReferenceValue}">
+							<tr:selectOneRadio styleClass="clear import" value="#{EasySubmissionSessionBean.radioSelectReferenceValue}" >
 								<f:selectItems id="selReferenceOptions" value="#{EasySubmissionSessionBean.REFERENCE_OPTIONS}"/>
 							</tr:selectOneRadio>
 						</span>
