PubMan issue 2151 - changed width for fullItem status area

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
@@ -733,6 +733,13 @@ body .wrapper {
     color: #FFFFFF;
     background-color: #004465;
 }
+.fullItem .itemHeader .medium_area0_p4.statusArea {
+	width:10.5454em;
+	text-align:center;
+}
+.fullItem .itemHeader .medium_area0_p4.statusArea .medium_label {
+	width:auto;
+}
 /*FULL ITEM BLOCK*/
 .fullItem .metaDataSection {
     border-color: #B0B1B1 !important;
