PubMan issue 2145 - changed padding for min_imgBtn because of cutted display

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/images.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/images.css
@@ -96,6 +96,12 @@
  background-position: center center;
  }
  */
+ 
+/* GLOBAL IMAGE CLASS */
+.min_imgBtn {
+	padding:0.1818em;
+}
+ 
 /*SORTING IMAGES FOR CONTENT MENU*/
 .ascSort {
     background-image: url('../images/All_Sorting_TriangleAscending_15_Active.png');
