changed text-transform for action menu in none

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/header.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/header.css
@@ -311,7 +311,7 @@
 	padding-top:0.1818em;
 	display:inline;
 	white-space:nowrap;
-	text-transform:capitalize;
+	text-transform:none;
 }
 
 	/*REPLACEMENT HACK FOR IE LESS THAN 6*/
