--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/fullItem.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/fullItem.css
@@ -364,7 +364,10 @@
 }
 
 .fullItem .advSearchCollapse {
-	 margin-top: -1.46em !important;
+	line-height: normal;
+    margin-left: 0.73em;
+    margin-top: 0.19em;
+    padding-bottom: 0.19em;
 }
 
 .inputInfoBox, .inputInfoBox a {
