--- a/pubman/pubman_presentation/src/main/webapp/tools/Tools.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/tools/Tools.jspf
@@ -91,7 +91,7 @@
 		<span class="seperator"></span>
 		<span class="free_area0_p8 endline itemHeadline">
 			<b>
-				<h:outputLink id="lnkUnAPI" value="#{ApplicationBean.pubmanInstanceUrl}/dataacquisition/">
+				<h:outputLink id="lnkUnAPI" value="#{ApplicationBean.pubmanInstanceUrl}/dataacquisition/"  target="_blank">
 					<h:outputText value="#{lbl.Tools_lblUnAPIHead}"/>
 				</h:outputLink>
 			</b>
@@ -110,7 +110,7 @@
 			</div>
 		</div>
 	</div>
-</h:panelGroup>							
+</h:panelGroup>
 <h:panelGroup>
 	<div class="full_area0 itemHeader">
 		<span class="xLarge_area0 endline">
@@ -119,35 +119,7 @@
 		<span class="seperator"></span>
 		<span class="free_area0_p8 endline itemHeadline">
 			<b>
-				<h:outputLink id="lnkValidationService" value="#{ApplicationBean.pubmanInstanceUrl}/validation/">
-					<h:outputText value="#{lbl.Tools_lblValidationServiceHead}"/>
-				</h:outputLink>
-			</b>
-		</span>
-	</div>
-	<div class="full_area0 itemBlock noTopBorder">
-		<h3 class="xLarge_area0_p8 endline blockHeader">
-			&#160;
-		</h3>
-		<div class="free_area0 itemBlockContent endline">		
-			<div class="free_area0 endline itemLine firstLine">
-				<span class="quad_area0_p8 noPaddingTopBottom endline">
-				<h:outputText value="#{lbl.Tools_lblValidationServiceText}" />
-					<br /><br />
-				</span>
-			</div>
-		</div>
-	</div>
-</h:panelGroup>							
-<h:panelGroup>
-	<div class="full_area0 itemHeader">
-		<span class="xLarge_area0 endline">
-			&#160;
-		</span>
-		<span class="seperator"></span>
-		<span class="free_area0_p8 endline itemHeadline">
-			<b>
-				<h:outputLink id="lnkSWORD" value="#{ApplicationBean.pubmanInstanceUrl}/sword-app/">
+				<h:outputLink id="lnkSWORD" value="#{ApplicationBean.pubmanInstanceUrl}/sword-app/"  target="_blank">
 					<h:outputText value="#{lbl.Tools_lblSWORDHead}"/>
 				</h:outputLink>
 			</b>
@@ -167,3 +139,32 @@
 		</div>
 	</div>
 </h:panelGroup>							
+<h:panelGroup>
+	<div class="full_area0 itemHeader">
+		<span class="xLarge_area0 endline">
+			&#160;
+		</span>
+		<span class="seperator"></span>
+		<span class="free_area0_p8 endline itemHeadline">
+			<b>
+				<h:outputLink id="lnkValidationService" value="#{ApplicationBean.pubmanInstanceUrl}/validation/"  target="_blank">
+					<h:outputText value="#{lbl.Tools_lblValidationServiceHead}"/>
+				</h:outputLink>
+			</b>
+		</span>
+	</div>
+	<div class="full_area0 itemBlock noTopBorder">
+		<h3 class="xLarge_area0_p8 endline blockHeader">
+			&#160;
+		</h3>
+		<div class="free_area0 itemBlockContent endline">		
+			<div class="free_area0 endline itemLine firstLine">
+				<span class="quad_area0_p8 noPaddingTopBottom endline">
+				<h:outputText value="#{lbl.Tools_lblValidationServiceText}" />
+					<br /><br />
+				</span>
+			</div>
+		</div>
+	</div>
+</h:panelGroup>							
+							
