Resolved [PUBMAN-2245] Search for invited events Workaround [PUBMAN-2274]Umlauts in Import names lead to a wrong URL (rename import-name) Resolved [PUBMAN-2134] Field "alternative title" for source in genres "Book" and "Conference Paper" "Special Journal Issue" is not available
Former-commit-id: e0d1a432e36135be9453a23e1868900c7a2c350f

--- a/pubman/pubman_presentation/src/main/webapp/search/ui/ContentDetailsCollection.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/ui/ContentDetailsCollection.jspf
@@ -111,13 +111,26 @@
 				</span>
 				<span class="large_area0_p8 lineToolSection">
 					<tr:commandButton id="btnAddFollowing" styleClass="min_imgBtn groupTool add" text=" " shortDesc="#{tip.search_btAdd}" action="#{AdvancedSearchEdit.eventCriterionCollection.eventCriterionManager.addObject}" />
-					<tr:commandButton id="btnRemoveFollowing" styleClass="min_imgBtn groupTool remove" text=" " shortDesc="#{tip.search_btRemove}" disabled="#{AdvancedSearchEdit.eventCriterionCollection.eventCriterionManager.size == 1}" action="#{AdvancedSearchEdit.eventCriterionCollection.eventCriterionManager.removeObject}"/>
+					<tr:commandButton id="btnRemoveFollowing" styleClass="min_imgBtn groupTool remove" text=" " shortDesc="#{tip.search_btRemove}" disabled="#{AdvancedSearchEdit.eventCriterionCollection.eventCriterionManager.size == 1}" action="#{AdvancedSearchEdit.eventCriterionCollection.eventCriterionManager.removeObject}" />
 <%-- 
 					<tr:commandButton styleClass="free_txtBtn groupBtn" text="#{lbl.adv_search_btClear}" action="#{eventCriterionBean.clearCriterion}" />
 --%>
 				</span>
 			</h:panelGroup>
-
+			
+			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder">
+				<b class="xLarge_area0_p8 endline labelLine clear">
+					&#160;<span class="noDisplay"> </span>
+				</b>
+				<span class="xHuge_area0 xTiny_marginLExcl endline">
+					<span class="free_area0 checkboxDoubleGroup">
+						<span class="large_checkbox tiny_marginRIncl">
+							<h:selectBooleanCheckbox id="EventCritertionBean_invitationStatus" value="#{eventCriterionBean.eventCriterionVO.invitationStatus }" />
+							<h:outputLabel id="lblEventCriterionBean_invitationStatus" value="Invited" />
+						</span>
+					</span>
+				</span>
+			</h:panelGroup>
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder"></h:panelGroup>
 			<h:panelGroup layout="block" styleClass="large_area0_p8 lineToolSection">
 				
