Resolved [PUBMAN-2140] Closed Contexts are Shown in Submission
Former-commit-id: 20c43de2a1966231c92395c0818fc03a417ebf25

--- a/pubman/pubman_presentation/src/main/webapp/list/contextList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/list/contextList.jspf
@@ -30,7 +30,9 @@ All rights reserved. Use is subject to license terms.
 <%@ taglib uri="http://java.sun.com/jsf/core" prefix="f" %>
 <%@ taglib uri="http://java.sun.com/jsf/html" prefix="h" %>
 <%@ taglib uri="http://myfaces.apache.org/trinidad" prefix="tr"%>
-
+<h:panelgroup layout="block" styleClass="full_area0 itemHeader" rendered="#{ContextListSessionBean.openContextsAvailable}">
+	<h:outputText id="tytSelectContextFirst" value="#{msg.NoOpenContextAvailable}"/>
+</h:panelgroup>
 <tr:iterator id="iterdepositorContextList2" var="context" value="#{ContextListSessionBean.depositorContextList}" binding="#{ContextListSessionBean.contextIterator}" rows="0" varStatus="index">
 
 	<h:panelGroup layout="block" styleClass="full_area0 itemHeader" rendered="#{ContextListSessionBean.contextIterator.rowIndex == 0}">
@@ -40,9 +42,11 @@ All rights reserved. Use is subject to license terms.
 		<span class="seperator"></span>
 		<span class="free_area0_p8 endline itemHeadline">
 			<b>
-				<tr:commandLink id="lnkSelectContextFirst" shortDesc="#{tip.list_select}" action="#{context.select}">
+				<tr:commandLink id="lnkSelectContextFirst" shortDesc="#{tip.list_select}" action="#{context.select}" rendered="#{!context.disabled}">
 					<tr:outputText value="#{context.name}"/>
 				</tr:commandLink>
+				<h:outputText id="tytSelectContextFirst" rendered="#{context.disabled}" value="#{context.name}">
+				</h:outputText>
 			</b>
 		</span>
 	</h:panelGroup>
@@ -53,9 +57,11 @@ All rights reserved. Use is subject to license terms.
 		<span class="seperator"></span>
 		<span class="free_area0_p8 endline itemHeadline">
 			<b>
-				<tr:commandLink id="lnkSelectContext" shortDesc="#{tip.list_select}" action="#{context.select}">
+				<tr:commandLink id="lnkSelectContext" shortDesc="#{tip.list_select}" action="#{context.select}" rendered="#{!context.disabled}">
 					<tr:outputText value="#{context.name}"/>
 				</tr:commandLink>
+				<h:outputText id="txtSelectContext" rendered="#{context.disabled}" value="#{context.name}">
+				</h:outputText>
 			</b>
 		</span>
 	</h:panelGroup>
