--- a/pubman/pubman_presentation/src/main/webapp/header/Header.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/header/Header.jspf
@@ -65,7 +65,11 @@
 </div>
 <%-- import main menu here --%>
 	<jsp:directive.include file="ui/MainMenu.jspf"/>
+	<a4j:status id="a4jstatus" onstart="beforeAjaxRequest()" onstop="afterAjaxRequest()" />
 
-	<a4j:status id="a4jstatus" onstart="beforeAjaxRequest()" onstop="afterAjaxRequest()" styleClass="noDisplay"/>
+	
+
+
+	
 <!-- end: header section -->
 </f:subview>
